--- a/src/app/pages/record/record.page.scss
+++ b/src/app/pages/record/record.page.scss
@@ -7,7 +7,19 @@
     font-weight: 300;
 }
 
-.title{
+.marque{
+    font-weight: bold;
+    color: black;
+    font-size: 1.3em;
+}
+
+.modele{
+    font-weight: bold;
+    color: black;
+    font-size: 1.3em;
+}
+
+.plaque{
     font-weight: bold;
     color: black;
     font-size: 1.3em;
