--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-content [fullscreen]="true">
   <div class="header">
-    <ion-title class="title" size="large">Welcome Back</ion-title>
-    <p class="subtitle">Sign in to access your account</p>
+    <ion-title class="title" size="large">Auto Ecole App</ion-title>
+    <p class="subtitle">Connexion</p>
   </div>
   <form [formGroup]="ionicForm"  novalidate>
     <div class="ion-padding">
@@ -26,12 +26,12 @@
       </div>
     
       <div class="forgotpassword">
-        <a [routerLink]="['/reset-password']" style="color: #FFC33F">Forgot Password?</a>
+        <a [routerLink]="['/reset-password']" style="color: #4c3fff">Forgot Password?</a>
       </div>
 
     </div>
     <div class="signupLink">
-      <p class="p">New memember? <a [routerLink]="['/signup']" style="color: #FFC33F">SignUp now</a></p>
+      <p class="p">Nouveau membre ? <a [routerLink]="['/signup']" style="color: #4c3fff">Création de compte</a></p>
     </div>
 
     <ion-fab *ngIf="ionicForm.valid" vertical="bottom" horizontal="end" style="margin-bottom: 30px;">
