--- a/src/app/pages/records/records.page.scss
+++ b/src/app/pages/records/records.page.scss
@@ -48,3 +48,16 @@ ion-card {
     
 
 }
+
+.flex {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+  }
+  .img-box {
+    height: 200px;
+    overflow: hidden;
+  }
+  img {
+    height: 200px;
+  }
